--- a/src/UI/FunButt/FunButt.module.css
+++ b/src/UI/FunButt/FunButt.module.css
@@ -3,6 +3,7 @@
     padding: 5px 40px 5px 40px;
     background: transparent;
     margin-top: 15px;
+    margin-bottom: 15px;
     cursor: pointer;
     display: block;
     border-radius: 10px;
